<resources>
    <string name="app_name">Receipt scanner</string>

    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="log_in">Log in</string>
    <string name="error">Error</string>
    <string name="empty_receipts">Your receipts list is empty</string>

    <string name="benefit_work_together">Work together on one project: review code, create pull requests and collaborate!</string>
    <string name="benefit_code_history">Easy to find code history and changes in code</string>
    <string name="benefit_publish_source">On Github your code will be available to everyone and everyone can help you improve it</string>

    <string name="next_uppercase">NEXT</string>
    <string name="finish_uppercase">FINISH</string>

    <string name="loading">Loading…</string>

    <string name="action_settings">Settings</string>
    <string name="receipt_icon">Receipt icon</string>

    <string name="item_no">№</string>
    <string name="item_name">Название</string>
    <string name="item_quantity">Кол.</string>
    <string name="item_price">Цена</string>
    <string name="item_sum">Сумма</string>
    <string name="receipt_total">ИТОГО:</string>
    <string name="new_receipt_was_added">New receipt was added</string>
    <string name="receipt_was_not_added">Receipt was not added</string>
    <string name="not_in_fns_db_now">Your receipt is not in the FNS database</string>

</resources>
